--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <li class="main-item feature-item">
               <div class="feature-icon-container">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="image-title">Strategy</h3>
@@ -170,7 +170,7 @@
             <li class="main-item feature-item">
               <div class="feature-icon-container">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="image-title">Punctuality</h3>
@@ -182,7 +182,7 @@
             <li class="main-item feature-item">
               <div class="feature-icon-container">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="#icon-diagram1"></use>
+                  <use href="./images/icons.svg#icon-diagram1"></use>
                 </svg>
               </div>
               <h3 class="image-title">Diligence</h3>
@@ -194,7 +194,7 @@
             <li class="main-item feature-item">
               <div class="feature-icon-container">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="image-title">Technologies</h3>
@@ -224,20 +224,36 @@
               <div class="team-text">
                 <h3 class="image-title">Mark Guerrero</h3>
                 <p class="main-text">Product Designer</p>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use class="ellipse" href="#icon-instagram"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-twitter"></use>
-                </svg>
-
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-facebook"></use>
-                </svg>
-
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-linkedin"></use>
-                </svg>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="main-item team-item">
@@ -251,18 +267,36 @@
               <div class="team-text">
                 <h3 class="image-title">Tom Ford</h3>
                 <p class="main-text">Frontend Developer</p>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-instagram"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-twitter"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-facebook"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-linkedin"></use>
-                </svg>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="main-item team-item">
@@ -276,19 +310,36 @@
               <div class="team-text">
                 <h3 class="image-title">Camila Garcia</h3>
                 <p class="main-text">Marketing</p>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-instagram"></use>
-                </svg>
-
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-twitter"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-facebook"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-linkedin"></use>
-                </svg>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="main-item team-item">
@@ -302,18 +353,36 @@
               <div class="team-text">
                 <h3 class="image-title">Daniel Wilson</h3>
                 <p class="main-text">UI Designer</p>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-instagram"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-twitter"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-facebook"></use>
-                </svg>
-                <svg class="uorteam-icon" width="16" height="16">
-                  <use href="#icon-linkedin"></use>
-                </svg>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a class="icon-link" href="">
+                      <svg class="uorteam-icon" width="16" height="16">
+                        <use href="#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
