--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link link" href="#">Studio</a>
+              <a class="header-link link-studio link" href="#">Studio</a>
             </li>
             <li class="header-item">
               <a class="header-link link" href="#">Portfolio</a>
@@ -228,28 +228,28 @@
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -271,28 +271,28 @@
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -314,28 +314,28 @@
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -357,28 +357,28 @@
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -482,14 +482,49 @@
     <!--Footer section-->
 
     <footer class="footer">
-      <div class="fooret-container container">
-        <a class="header-logo logo-down link" href="./index.html"
-          >Web <span class="footer-logo-down">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+      <div class="footer-page">
+        <div class="fooret-container container">
+          <a class="header-logo logo-down link" href="./index.html"
+            >Web <span class="footer-logo-down">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <p class="text-social">Social media</p>
+          <ul class="icon-list footer-item-list">
+            <li class="icon-item">
+              <a class="icon-link footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
