--- a/index.html
+++ b/index.html
@@ -396,26 +396,32 @@
           <h2 class="main-title">Our Portfolio</h2>
           <ul class="main-list portfolio-list list">
             <li class="portfolio-item main-item">
-              <img
-                class="main-images"
-                src="./images/OurPortfolio/img4.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="ProjectCard">
+                <img
+                  class="main-images"
+                  src="./images/OurPortfolio/img4.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+              </div>
+
               <div class="portfolio-border">
                 <h3 class="image-title">Banking App</h3>
                 <p class="main-text">App</p>
               </div>
             </li>
             <li class="portfolio-item main-item">
-              <img
-                class="main-images"
-                src="./images/OurPortfolio/img5.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="ProjectCard">
+                <img
+                  class="main-images"
+                  src="./images/OurPortfolio/img5.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+              </div>
+
               <div class="portfolio-border">
                 <h3 class="image-title">Cashless Payment</h3>
                 <p class="main-text">Marketing</p>
@@ -436,26 +442,32 @@
               </div>
             </li>
             <li class="portfolio-item main-item">
-              <img
-                class="main-images"
-                src="./images/OurPortfolio/img7.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="ProjectCard">
+                <img
+                  class="main-images"
+                  src="./images/OurPortfolio/img7.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+              </div>
+
               <div class="portfolio-border">
                 <h3 class="image-title">Taxi Service</h3>
                 <p class="main-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item main-item">
-              <img
-                class="main-images"
-                src="./images/OurPortfolio/img8.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="ProjectCard">
+                <img
+                  class="main-images"
+                  src="./images/OurPortfolio/img8.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+              </div>
+
               <div class="portfolio-border">
                 <h3 class="image-title">Screen Illustrations</h3>
                 <p class="main-text">Design</p>
@@ -481,48 +493,50 @@
 
     <!--Footer section-->
 
-    <footer class="footer-page">
-      <div class="fooret-container container">
-        <a class="header-logo logo-down link" href="./index.html"
-          >Web <span class="footer-logo-down">Studio</span>
-        </a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
-      </div>
-      <div class="footer-social-container">
-        <p class="text-social">Social media</p>
-        <ul class="icon-list footer-item-list">
-          <li class="icon-item">
-            <a class="icon-link footer-icon-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a class="icon-link footer-icon-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a class="icon-link footer-icon-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a class="icon-link footer-icon-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+    <footer class="footer">
+      <div class="footer-page">
+        <div class="fooret-container container">
+          <a class="header-logo logo-down link" href="./index.html"
+            >Web <span class="footer-logo-down">Studio</span>
+          </a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <p class="text-social">Social media</p>
+          <ul class="icon-list footer-item-list">
+            <li class="icon-item">
+              <a class="icon-link footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
