--- a/index.html
+++ b/index.html
@@ -436,6 +436,7 @@
                 width="360"
                 height="300"
               />
+
               <div class="portfolio-border">
                 <h3 class="image-title">Meditation App</h3>
                 <p class="main-text">App</p>
@@ -481,6 +482,7 @@
                 width="360"
                 height="300"
               />
+
               <div class="portfolio-border">
                 <h3 class="image-title">Online Courses</h3>
                 <p class="main-text">Marketing</p>
@@ -493,50 +495,48 @@
 
     <!--Footer section-->
 
-    <footer class="footer">
-      <div class="footer-page">
-        <div class="fooret-container container">
-          <a class="header-logo logo-down link" href="./index.html"
-            >Web <span class="footer-logo-down">Studio</span>
-          </a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital marketing &
-            growth solutions.
-          </p>
-        </div>
-        <div class="footer-social-container">
-          <p class="text-social">Social media</p>
-          <ul class="icon-list footer-item-list">
-            <li class="icon-item">
-              <a class="icon-link footer-icon-link" href="">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-item">
-              <a class="icon-link footer-icon-link" href="">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-item">
-              <a class="icon-link footer-icon-link" href="">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-item">
-              <a class="icon-link footer-icon-link" href="">
-                <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+    <footer class="footer footer-page">
+      <div class="footer-container container">
+        <a class="header-logo logo-down link" href="./index.html"
+          >Web <span class="footer-logo-down">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
+      <div class="footer-social-container">
+        <p class="text-social">Social media</p>
+        <ul class="icon-list footer-item-list">
+          <li class="icon-item">
+            <a class="icon-link footer-icon-link" href="">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a class="icon-link footer-icon-link" href="">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a class="icon-link footer-icon-link" href="">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a class="icon-link footer-icon-link" href="">
+              <svg class="footer-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
