--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
     <!--Footer section-->
 
     <footer class="footer">
-      <div class="page-footer">
-        <div class="fooret-container container">
+      <div class="page-footer container">
+        <div class="footer-logo">
           <a class="header-logo logo-down link" href="./index.html"
             >Web <span class="footer-logo-down">Studio</span>
           </a>
@@ -505,39 +505,39 @@
             Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.
           </p>
-          <div class="footer-container-social">
-            <p class="social-text-footer">Social media</p>
-            <ul class="icon-list-footer">
-              <li class="icon-item">
-                <a class="icon-link" href="">
-                  <svg class="uorteam-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item">
-                <a class="icon-link" href="">
-                  <svg class="uorteam-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item">
-                <a class="icon-link" href="">
-                  <svg class="uorteam-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="icon-item">
-                <a class="icon-link" href="">
-                  <svg class="uorteam-icon" width="16" height="16">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+        </div>
+        <div class="footer-social">
+          <p class="social-text-footer">Social media</p>
+          <ul class="icon-list-footer">
+            <li class="icon-item">
+              <a class="icon-link icon-link-footer" href="">
+                <svg class="uorteam-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link icon-link-footer" href="">
+                <svg class="uorteam-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link icon-link-footer" href="">
+                <svg class="uorteam-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-item">
+              <a class="icon-link icon-link-footer" href="">
+                <svg class="uorteam-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
