new-commit-hw4-finish

--- a/index.html
+++ b/index.html
@@ -419,6 +419,10 @@
                   width="360"
                   height="300"
                 />
+                <p class="projectcard-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-border">
@@ -435,6 +439,10 @@
                   width="360"
                   height="300"
                 />
+                <p class="projectcard-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-border">
@@ -444,13 +452,19 @@
             </li>
 
             <li class="portfolio-item main-item">
-              <img
-                class="main-images"
-                src="./images/OurPortfolio/img6.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="ProjectCard">
+                <img
+                  class="main-images"
+                  src="./images/OurPortfolio/img6.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="projectcard-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
 
               <div class="portfolio-border">
                 <h3 class="image-title">Meditation App</h3>
@@ -466,6 +480,10 @@
                   width="360"
                   height="300"
                 />
+                <p class="projectcard-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-border">
@@ -482,6 +500,10 @@
                   width="360"
                   height="300"
                 />
+                <p class="projectcard-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
               </div>
 
               <div class="portfolio-border">
@@ -490,13 +512,19 @@
               </div>
             </li>
             <li class="portfolio-item main-item">
-              <img
-                class="main-images"
-                src="./images/OurPortfolio/img9.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="ProjectCard">
+                <img
+                  class="main-images"
+                  src="./images/OurPortfolio/img9.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="projectcard-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
 
               <div class="portfolio-border">
                 <h3 class="image-title">Online Courses</h3>
